--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -4,6 +4,30 @@ on:
   push:
     branches:
       - "master"
+name: Dependencies
+
+on:
+  workflow_dispatch:
+
+jobs:
+  dependencies:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Setup dependencies
+        run: |
+          # Install Docker CLI
+          curl https://get.docker.com | sh
+          
+          # Add docker/login-action as a dependency
+          git clone https://github.com/docker/login-action.git .github/actions/docker/login-action
+          
+          # Add docker/setup-buildx-action as a dependency
+          git clone https://github.com/docker/setup-buildx-action.git .github/actions/docker/setup-buildx-action
+          
+          # Add docker/build-push-action as a dependency
+          git clone https://github.com/docker/build-push-action.git .github/actions/docker/build-push-action
 
 jobs:
   build:
