--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -36,6 +36,7 @@ jobs:
         name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
+          registry: docker.pkg.github.com
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
