--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -15,6 +15,8 @@ on:
         default: 'warning'
       tags:
         description: 'Test scenario tags'
+env:
+  TZ: Asia/Shanghai
 
 jobs:
   buildx:
